@startuml ER Diagram

skinparam dpi 100
skinparam maxWidth 1200
skinparam nodesep 50
skinparam ranksep 50
left to right direction

' 实体定义 (Simplified)
entity "User" as User {
  * id : string <<PK>>
  --
  name : string
  email : string
  role : enum("admin", "user")
}

entity "UserProgress" as UserProgress {
  * id : string <<PK>>
  --
  * user_id : string <<FK>>
}

entity "CourseProgress" as CourseProgress {
  * id : string <<PK>>
  --
  * user_progress_id : string <<FK>>
  * course_id : number <<FK>>
  progress : float
}

entity "LessonProgress" as LessonProgress {
  * id : string <<PK>>
  --
  * user_progress_id : string <<FK>>
  * lesson_id : number <<FK>>
  progress : float
}

entity "QuizProgress" as QuizProgress {
  * id : string <<PK>>
  --
  * user_progress_id : string <<FK>>
  * quiz_id : string <<FK>>
  attempts : integer
  highestScore : integer
}

entity "Author" as Author {
  * id : number <<PK>>
  --
  name : string
  email : string
}

entity "CourseDetail" as CourseDetail {
  * id : number <<PK>>
  --
  title : string
  difficulty : enum("Beginner", "Intermediate", "Advanced")
  --
  author_id : number <<FK>>
}

entity "LessonDetail" as LessonDetail {
  * id : number <<PK>>
  --
  * course_id : number <<FK>>
  title : string
}

entity "QuizMeta" as QuizMeta {
  * id : string <<PK>>
  --
  * course_id : number <<FK>>
  * lesson_id : number <<FK>>
  required_score : number
}

entity "QuizAttempt" as QuizAttempt {
  * id : string <<PK>>
  --
  * user_id : string <<FK>>
  * quiz_id : string <<FK>>
  score : number
}

entity "Achievement" as Achievement {
  * id : string <<PK>>
  --
  * user_id : string <<FK>>
  name : string
}

' 关系定义
User ||--o{ UserProgress : tracks
UserProgress ||--o{ CourseProgress : includes
UserProgress ||--o{ LessonProgress : includes
UserProgress ||--o{ QuizProgress : includes
CourseDetail ||--o{ CourseProgress : tracked_by
LessonDetail ||--o{ LessonProgress : tracked_by
QuizMeta ||--o{ QuizProgress : tracked_by
User ||--o{ QuizAttempt : has
CourseDetail ||--o{ LessonDetail : contains
QuizMeta ||--o{ QuizAttempt : has
User ||--o{ Achievement : earns

@enduml